# ancient-art-researcher

./: .gitignore  README.md  build_finds_viewer.sh  cloudbuild.yaml  pyproject.toml
.github/workflows/: deploy.yaml
finds_viewer/: Dockerfile  Makefile  build.sh  build_finds_viewer.sh  deploy.sh  pyproject.toml
finds_viewer/src/: app.py
finds_viewer/src/finds_viewer/: app.py
finds_viewer/src/finds_viewer/static/: styles.css
finds_viewer/src/finds_viewer/static/css/: styles.css
finds_viewer/src/finds_viewer/static/js/: script.js
finds_viewer/src/finds_viewer/templates/: gridview.html  index.html  latest.html
finds_viewer/src/templates/: index.html
researcher/: Dockerfile  Makefile  build.sh  cronjob.yaml  deploy.sh  pyproject.toml  run.sh  run_docker.sh  topics.txt
researcher/src/researcher/: crew.py  main.py  manage_redis.py
researcher/src/researcher/config/: agents.yaml  tasks.yaml
researcher/src/researcher/tools/: content_checker.py  content_uploader.py  description_generator.py  image_downloader.py
researcher/src/researcher/utils/: types.py
src/finds_viewer/: Dockerfile  app.py  requirements.txt
src/finds_viewer/templates/: index.html
src/history_research_assistant/: crew.py  main.py
src/history_research_assistant/config/: agents.yaml  tasks.yaml
src/history_research_assistant/tools/: content_uploader.py  google_drive_uploader.py  image_downloader.py  image_uploader.py
src/history_research_assistant/utils/: types.py
