[tool.poetry]
name = "finds-viewer"
version = "0.1.0"
description = "A website to view the latest ancient art research"
authors = ["Vikram Pawar <pvikram035@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
google-cloud-storage = "^2.18.0"
google-cloud-firestore = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
